--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <div class="home" title="Accueil">
                     <img src="images/home.png" alt="">
                 </div>
-                <div class="panier" title="Magasin en ligne">
-                    <img src="" alt="">
+                <div class="panier" title="connexion">
+                    <img src="image/connexionlogo.png" alt="">
                 </div>
                 <div class="calend" title="Calendrier">
                     <img src="images/calendar.png" alt="">
